# spice

./: .gitignore  README.md
10ns-delay-line/: 10ns-delay.asc  10ns-delay.asy  python-delay-playground.ipynb
helpers/: generate_colored_noise_pwl.py  generate_noise_pwl.py  generate_transient_spike_pwl.py  noise_generators.py  pwl_helpers.py
python/: pyproject.toml
python/spicy_grips/: generate_colored_noise_pwl.py  generate_pwl_noise.py  generate_sipm_noise.py  generate_transient_spike_pwl.py  noise_generators.py  pwl_helpers.py
sipm-delay-line/: readme.md  sipm-xrlines.asc
spice/10ns-delay-line/: python-delay-playground.ipynb  readme.md
spice/sipm-delay-line/: 10ns-delay.asc  readme.md  sipm-xrlines.asc  sipm-xrlines.net  sipm-xrlines.plt
spice/transimpedance-amp-output-impedance/: 10ns-delay.asy  readme.md
spice/transimpedance-with-line-driver/: AD8001AR.asy  ad8001ar.cir  readme.md  tia-with-driver.asc  tia-with-driver.plt
transimpedance-amp-output-impedance/: sipm-tia-delay-line.asc
